--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   "homepage": "https://github.com/side-chaine/beLive#readme",
   "type": "module",
   "devDependencies": {
+    "typescript": "^5.9.3",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.1.4",
